--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ section1{
 section2{
   float: left;
   width: 90%;
-  border: 1px solid #8D9096;
 }
 
 @media only screen and (max-width: 600px) {
@@ -53,7 +52,7 @@ section2{
   }
   section2{
     float: left;
-    margin: 40px 0px 0px 0px
+    margin: 30px 0px 0px 0px;
     border: 1px solid #8D9096;
   }
 }
@@ -70,7 +69,7 @@ button {
   font-size: 16px;
   background: #28C4D8;
   padding: 10px 20px 10px 20px;
-  margin: 30px 0px 0px 0px;;
+  margin: 30px 0px 0px 0px;
   text-decoration: none;
   border: none;
 }
